--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "nunjucks": "^3.2.4",
     "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/nunjucks": "^3.2.6",
     "@types/sanitize-html": "^2.16.0",
     "nodemon": "^3.1.10",
